# QuaternionEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.py  build_earth_specular_faces.py  build_equirect_cube_faces.py  build_planet_detail_faces.py  build_planet_height_source.py  compile_shaders.ps1  compile_shaders.py  conanfile.txt  plan_orbit.md  plans.md  texture_compression.py
src/: CMakeLists.txt  main.cpp
src/audio/: README.md  miniaudio_system.cpp  miniaudio_system.h
src/cmake/: sources_audio.cmake  sources_compute.cmake  sources_core.cmake  sources_game.cmake  sources_physics.cmake  sources_render.cmake  sources_root.cmake  sources_runtime.cmake  sources_scene.cmake
src/compute/: README.md  vk_compute.cpp  vk_compute.h
src/core/: README.md  asset_manager.cpp  asset_manager.h  config.h  context.cpp  context.h  engine.cpp  engine.h  engine_context.h  engine_ui.cpp  frame_resources.h  game_api.cpp  game_api.h  ibl_manager.cpp  ibl_manager.h  ktx2_loader.cpp  ktx2_loader.h  ktx_loader.h  render_viewport.cpp  render_viewport.h  texture_cache.cpp  texture_cache.h  types.h  vk_descriptor_manager.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_engine.cpp  vk_engine.h  vk_engine_ui.cpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline_manager.cpp  vk_pipeline_manager.h  vk_raytracing.cpp  vk_raytracing.h  vk_resource.cpp  (+5 more)
src/core/assets/: README.md  async_loader.cpp  async_loader.h  ibl_manager.cpp  ibl_manager.h  ktx_loader.cpp  ktx_loader.h  locator.cpp  locator.h  manager.cpp  manager.h  texture_cache.cpp  texture_cache.h
src/core/debug_draw/: README.md  debug_draw.cpp  debug_draw.h  engine_debug_draw.cpp  engine_debug_draw.h  physics_debug_draw.cpp  physics_debug_draw.h
src/core/descriptor/: README.md  descriptors.cpp  descriptors.h  manager.cpp  manager.h
src/core/device/: README.md  device.cpp  device.h  images.cpp  images.h  resource.cpp  resource.h  swapchain.cpp  swapchain.h
src/core/frame/: README.md  resources.cpp  resources.h
src/core/game_api/: game_api.cpp  game_api_blackbody.cpp  game_api_camera.cpp  game_api_debug.cpp  game_api_lighting.cpp  game_api_mesh_vfx.cpp  game_api_particles.cpp  game_api_planets.cpp  game_api_postfx.cpp  game_api_rocket_flame.cpp  game_api_rocket_plumes.cpp  game_api_scene.cpp  game_api_textures.cpp  game_api_volumetrics.cpp
src/core/input/: README.md  input_system.cpp  input_system.h  keybinds.cpp  keybinds.h
src/core/orbit_plot/: orbit_plot.cpp  orbit_plot.h
src/core/picking/: README.md  line_pick_segment.h  picking_system.cpp  picking_system.h
src/core/pipeline/: README.md  manager.cpp  manager.h  sampler.cpp  sampler.h
src/core/raytracing/: README.md  raytracing.cpp  raytracing.h
src/core/ui/: README.md  imgui_system.cpp  imgui_system.h
src/core/util/: README.md  debug.cpp  debug.h  initializers.cpp  initializers.h  logger.cpp  logger.h
src/game/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  example_game.cpp  example_game.h  game_world.cpp  game_world.h  main_game.cpp  main_game.h  rebasing_test_game.cpp  rebasing_test_game.h  space_combat_game.cpp  space_combat_game.h
src/game/component/: component.h  ship_controller.cpp  ship_controller.h
src/game/input/: keybinds.cpp  keybinds.h
src/game/legacy/: example_game.cpp  example_game.h  rebasing_test_game.cpp  rebasing_test_game.h
src/game/orbit/: README.md  orbit_plot_lod_builder.cpp  orbit_plot_lod_builder.h  orbit_plot_util.cpp  orbit_plot_util.h  orbit_prediction_math.cpp  orbit_prediction_math.h  orbit_prediction_service.cpp  orbit_prediction_service.h  orbit_prediction_tuning.h  orbit_render_curve.cpp  orbit_render_curve.h
src/game/state/: game_state.cpp  game_state.h  game_state_manager.cpp  game_state_manager.h  gameplay_state.cpp  gameplay_state.h  pause_state.cpp  pause_state.h  settings_state.cpp  settings_state.h  title_screen_state.cpp  title_screen_state.h
src/game/states/: README.md  gameplay_loading_state.cpp  gameplay_loading_state.h  pause_state.h  settings_state.h  title_screen_state.cpp  title_screen_state.h
src/physics/: README.md  body_settings.h  collider_asset.cpp  collider_asset.h  collider_mesh_instance.h  collision_shape.h  gltf_collider_parser.cpp  gltf_collider_parser.h  physics_body.cpp  physics_body.h  physics_context.cpp  physics_context.h  physics_world.h
src/physics/jolt/: README.md  jolt_physics_world.cpp  (+2 more)
src/render/: README.md  materials.cpp  materials.h  pipelines.cpp  pipelines.h  primitives.h  renderpass.cpp  renderpass.h  rg_graph.cpp  rg_graph.h  rg_resources.cpp  vk_materials.cpp  vk_materials.h  vk_renderpass_background.cpp  vk_renderpass_background.h  vk_renderpass_geometry.cpp  vk_renderpass_geometry.h  vk_renderpass_lighting.cpp  vk_renderpass_lighting.h  vk_renderpass_shadow.cpp  vk_renderpass_transparent.cpp  vk_renderpass_transparent.h
src/runtime/: README.md  game_runtime.cpp  game_runtime.h  i_game_callbacks.h  time_manager.cpp  time_manager.h
src/scene/: README.md  camera.cpp  camera.h  frustum_culling.h  mesh_bvh.cpp  mesh_bvh.h  render_object_culling.h  tangent_space.cpp  tangent_space.h  vk_loader.cpp  vk_loader.h  vk_loader_load.cpp  vk_scene.cpp  vk_scene.h  vk_scene_instances.cpp  vk_scene_internal.h  vk_scene_physics.cpp  vk_scene_picking.cpp  vk_scene_update.cpp
tests/: CMakeLists.txt  gameplay_prediction_maneuver_derived_results_tests.cpp  gameplay_prediction_maneuver_lifecycle_tests.cpp  gameplay_prediction_maneuver_runtime_results_tests.cpp  gameplay_prediction_maneuver_runtime_window_tests.cpp  gameplay_prediction_maneuver_service_tests.cpp  gameplay_prediction_maneuver_test_common.h  gameplay_prediction_maneuver_test_stubs.cpp  gameplay_prediction_maneuver_tests.cpp  gameplay_state_test_stubs.cpp  gameplay_time_warp_transition_tests.cpp  maneuver_system_tests.cpp  orbit_helpers_tests.cpp  orbit_prediction_planner_tests.cpp  orbit_render_curve_tests.cpp  planet_quadtree_tests.cpp  prediction_cache_internal_tests.cpp  scenario_loader_tests.cpp  time_warp_state_tests.cpp
(+373 files in other folders)
